<resources>
    <string name="app_name">Ludex</string>
    <string name="text_click">CLICK</string>
    <string name="buscar">Search</string>
    <string name="tlou1sinopsis">Conoce la emocionante historia y a los entrañables personajes de The Last of Us, ganador de más de 200 premios del Juego del año.
            En una civilización devastada, donde los infectados y los empedernidos sobrevivientes proliferan, Joel, un protagonista cansado, es contratado para rescatar de contrabando
            a una niña de 14 años llamada Ellie de una zona de cuarentena militar. Sin embargo, lo que comienza como un pequeño trabajo pronto se transforma en una brutal travesía por todo el país.</string>
    <string name="games">Games</string>
    <string name="my_list">My List</string>
    <string name="fav">Favorites</string>
    <string name="state">STATE</string>
    <string name="platform">PLATFORM</string>
    <string name="developer">DEVELOPER</string>
    <string name="rel_date">RELEASE DATE</string>
    <string name="synopsis">SYNOPSIS</string>
    <string name="playing">Playing</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="abandoned">Abandoned</string>
    <string name="unclassified">Unclassified</string>
    <string name="favorite">Favorite</string>
    <string name="status_playing">Playing</string>
    <string name="status_completed">Completed</string>
    <string name="status_pending">Pending</string>
    <string name="status_unclassified">Unclassified</string>
    <string name="status_abandoned">Abandoned</string>
    <string name="status_tried">Tried</string>
    <string name="cover_image" translatable="false">Cover Image</string>

    TODO Translate
    <string name="login_footer_unselected">¿Todavía no tienes cuenta?</string>
    <string name="login_footer_selected">Regístrate</string>
    <string name="login_error_mail">El email no es válido</string>
    <string name="login_error_password">Debe contener al menos 6 caracteres</string>
    <string name="login_error_dialog_title">No hemos encontrado el usuario</string>
    <string name="login_error_dialog_body">Verifique los datos o vuelva a intentarlo</string>
    <string name="login_error_dialog_negative_action">Cancelar</string>
    <string name="login_error_dialog_positive_action">Reintentar</string>
    <string name="feature_not_allowed">Feature no solicitada :)</string>

    <string name="introduction_button_signin">Crear cuenta</string>

    <string name="signin_form_real_name">Nombre completo</string>
    <string name="signin_form_nickname">Nombre público de usuario</string>
    <string name="signin_form_email">Correo electrónico</string>
    <string name="signin_form_password">Contraseña</string>
    <string name="signin_form_repeat_password">Repetir contraseña</string>
    <string name="signin_error_mail">El email no es válido</string>
    <string name="signin_error_nickname">Debe contener al menos 6 caracteres</string>
    <string name="signin_error_realname">Debe contener al menos 6 caracteres</string>
    <string name="signin_error_password">Las 2 contraseñas debes ser iguales</string>
    <string name="signin_footer_unselected">¿Ya tienes cuenta?</string>
    <string name="signin_footer_selected">Inicia sesión</string>
    <string name="signin_error_dialog_title">Ha ocurrido un error</string>
    <string name="signin_error_dialog_body">No hemos podido crear tu cuenta, inténtalo de nuevo más tarde</string>
    <string name="signin_error_dialog_positive_action">Okey :(</string>
    <string name="signin_button_createaccount">Crear mi cuenta</string>
    <!--    Sign in form    -->
    <string name="nickname">Nickname</string>
    <string name="full_name">Full name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>

    <string name="verification_button_go_to_nuwe">Vamos a nuwe</string>
    <string name="verification_check_mail">To access the app, please verify your email (remember to check your SPAM folder).</string>
    <string name="password_reset_email_sent">Reset email sent</string>
    <string name="password_reset_email_failed">Reset email failed</string>
    <string name="enter_email_message">Enter email</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="default_web_client_id">993686722819-5tlf50lkhq8khatufi2rq4il3fsdvsn7.apps.googleusercontent.com</string>
    <!--    <string name="default_web_client_id">993686722819-95m8ukq49f41hrsr33lqq28cb5ev63hj.apps.googleusercontent.com</string>-->

    <!--    Bottom    -->
    <string name="or_login_with">or login with</string>
    <string name="sign_up_text_button">Don\'t have an account yet? Sign up</string>

    <!--    Auth    -->
    <string name="log_in">Log In</string>
    <string name="log_in_anonymously">Log in Anonymously</string>

    <string name="e_mail">E-mail</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="continue_text">Continue</string>

    <string name="welcome">Welcome</string>
    <string name="succes_new_account">Your account has been successfully created!</string>
    <string name="user">User</string>
    <string name="log_out">Log Out</string>
    <string name="status_circle">Status Circle</string>


</resources>