<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.MyListFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="@string/buscar"
                android:imeOptions="actionDone"
                android:textStyle="italic"
                android:alpha="0.85"
                android:inputType="text"
                android:drawableEnd="@drawable/baseline_search_white"
                android:maxLines="1"
                android:singleLine="true" />
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp">
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipJugando"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/playing"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipPendiente"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pending"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipCompletado"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipAbandonado"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abandoned"/>

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerGameList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>





    </LinearLayout>