<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.list.ListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipJugando"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fadeScrollbars="true"
                    app:chipBackgroundColor="@color/primary_color"
                    android:textColor="@color/dark_gray"
                    android:text="@string/playing"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPendiente"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/primary_color"
                    android:textColor="@color/dark_gray"
                    android:text="@string/pending"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCompletado"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/primary_color"
                    android:textColor="@color/dark_gray"
                    android:text="@string/completed"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAbandonado"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/primary_color"
                    android:textColor="@color/dark_gray"
                    android:text="@string/abandoned"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSC"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/primary_color"
                    android:textColor="@color/dark_gray"
                    android:text="@string/unclassified"/>

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerGameList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</LinearLayout>